ggspectra 0.2.3
===============

Track changes in package 'photobiology' 0.9.18.
* Add plot.calibration_spct()
* Add ggplot.calibration_spct()

ggspectra 0.2.2
===============

Track changes in package 'photobiology' 0.9.16 and 0.9.17. This among other
improvements makes it easy to plot spectral absorptance.
Expand y scale to expected range in all cases, but do not force these limits in
any case when data exceeds them, except for absorbance for which the y scale is
not expanded past 6 a.u.
Add new annotation "boundaries" to highlight with horizontal line(s) the
expected range of the plotted quantity, highlighting the limit(s) exceeded if
data fall outside the expected/range.
Add previously missing ggplot() method for class object_spct.
Revise vignettes.

ggspectra 0.2.1
===============

Track changes in package 'photobiology' 0.9.14.
Add continuous scales with defaults suitable for spectral data, with support
for automatic axis labels both as R-expressions and as LaTeX mark-up.
Add utility functions for SI scale prefixes.
Add utility functions for x-axis-labels and secondary x-axis.
Add utility functions for y-axis-labels.
Update User Guide (add examples of graphical comparison of multiple lists of
wavebands).

ggspectra 0.2.0
===============

Improve handling of annotations parameter in plot() methods.
Add functions ggcolorchart() and black_or_white().
Add statistics stat_wb_box() and stat_wb_column() with "rect" as default geom
and stat_wb_hbar() with "errorbarh" as default geom.
Change default geom from "rect" to "text" in all the summary stats for spectra.
Update stats with "text" as default geom to use an additional variable BW.color
computed by black_or_white() as default mapping for color.
As default geoms and color mapping have changed, this update can break existing
code. Changes to plot() methods are backwards compatible but default color of
some text labels is changed from "white" to "black" to improve readability,