@@ -53,6 +53,7 @@ export(exponent2factor)
 export(exponent2prefix)
 export(exponent2prefix_name)
 export(geom_spct)
+export(ggtitle_spct)
 export(has_SI_prefix)
 export(multiplot)
 export(nearest_SI_exponent)
