@@ -544,10 +544,10 @@ plot.response_spct <-
     } else {
       stop("Invalid 'unit.out' argument value: '", unit.out, "'")
     }
-    if ("title" %in% annotations) {
-      out.ggplot <- out.ggplot + labs(title = deparse(substitute(x)))
-    }
-    out.ggplot
+    out.ggplot +
+      ggtitle_spct(x = x,
+                   x.name = deparse(substitute(x)),
+                   annotations = annotations)
   }
 
 
