@@ -5,6 +5,10 @@ Track changes in package 'photobiology' 0.9.18.
 * Add plot.calibration_spct()
 * Add ggplot.calibration_spct()
 
+Improve handling of plot titles.
+* Add utility function ggtitle_spct()
+* Update all plot() methods to allow flexible contents in titles.
+
 ggspectra 0.2.2
 ===============
 
